--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "WLM-TypeScript-React-Starter",
+  "name": "simple-mvvm",
   "version": "1.0.0",
-  "description": "TypeScript-React-Starter",
+  "description": "simple-mvvm",
   "scripts": {
     "dev": "MODE=development webpack-dev-server --color --hot --open --mode=development",
     "build": "MODE=production webpack --mode=production",
     "start": "npm run dev",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "jest --detectOpenHandles  --verbose"
   },
   "lint-staged": {
     "src/*/**.{ts,tsx}": "tslint --project tsconfig.json"
   },
   "keywords": [],
-  "author": "icepy",
+  "author": "totoSalad",
   "license": "LGPL-3.0",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
@@ -32,15 +33,43 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.13",
+    "@types/react": "^16.4.10",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
+    "@types/react-router-dom": "^4.3.0",
+    "jest": "^24.8.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "@types/react": "^16.4.10",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-redux": "^6.0.6",
-    "@types/react-router-dom": "^4.3.0"
+    "ts-jest": "^24.0.2"
+  },
+  "jest": {
+    "verbose": true,
+    "notify": true,
+    "collectCoverage": true,
+    "testEnvironment": "node",
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "<rootDir>/tsconfig.json"
+      }
+    },
+    "modulePaths": [
+      "<rootDir>/src"
+    ],
+    "roots": [
+      "<rootDir>/__tests__"
+    ],
+    "coverageReporters": [
+      "html",
+      "text",
+      "text-summary"
+    ]
   }
 }
