--- a/__tests__/.babelrc
+++ b/__tests__/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": [
-    ["@babel/preset-env", {"targets": {"node": "current"}}],
-    "@babel/preset-typescript",
+    ["@babel/preset-env", {
+      "targets": {"node": "current"},
+      }
+    ],
   ]
 }
