feat: data 自动更新

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
   "configurations": [
     {
       "type": "node",
-      "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/__tests__/text-parser.ts"
+      "request": "attach",
+      "name": "Attach",
+      "port": 9229
     },
   ]
 }
